--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "server/index.js": {
-      "runtime": "vercel-node@latest"
+      "runtime": "@vercel/node"
     }
   },
   "rewrites": [
