--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "version": 2,
-  "functions": {
-    "server/index.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/server/index.js"
+      "destination": "/api/index.js"
     },
     {
       "source": "/(.*)",
